deploy/manifests/platform-manifests.yaml
---
# Source: platform/charts/api-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  type: LoadBalancer
  ports:
    - name: "8181"
      port: 80
      targetPort: 8181
  selector:
    app: api-gateway
status:
  loadBalancer: {}
---
# Source: platform/charts/api-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - env:
            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
              value: ' TRACE'
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: "gayankod/api-gateway:latest"
          name: api-gateway
          ports:
            - containerPort: 80
            - containerPort: 8181
          resources: {}
      restartPolicy: Always
status: {}
